# Lattice-Dynamic-Node-Sim

./: .gitignore  Deformation.py  Main.py  MorphingWing.py  MorphingWingOld.py  Normals.py  README.md  Test.py  TotalDNR.py  pyproject.toml  session_io.py  stage_1_boundary.py  stage_2_geodesics.py  stage_3_lattice.py  stage_4.5_extendedMesh.py  stage_4_deformation.py  stage_4_marching_triangulation.cpp  stage_5_relative_plotting.py
sessions/: 3PartTest.pkl  BasedOnMaster.pkl  MultiModelSaveTest.pkl  PipelineTest.pkl  TV.pkl  TestBench4MultiModels.pkl  Tutorial.pkl  V1CleanA.pkl  a.pkl  test.pkl  testNewGeodesics.pkl  testNewGeodesicsV2.pkl
